WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266261
[IFC][Ruby] Fix fast/ruby/ruby-empty-rt.html and fast/ruby/rubyDOM-remove-text2.html
https://bugs.webkit.org/show_bug.cgi?id=266261
Summary
[IFC][Ruby] Fix fast/ruby/ruby-empty-rt.html and fast/ruby/rubyDOM-remove-tex...
alan
Reported
2023-12-11 16:53:17 PST
ssia
Attachments
[fast-cq]Patch
(5.43 KB, patch)
2023-12-11 16:55 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-12-11 16:55:13 PST
Created
attachment 468991
[details]
[fast-cq]Patch
EWS
Comment 2
2023-12-12 06:47:40 PST
Committed
271929@main
(126aeaf84025): <
https://commits.webkit.org/271929@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468991
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-12-12 06:48:26 PST
<
rdar://problem/119553247
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug