[IFC][Ruby] Fix fast/ruby/ruby-empty-rt.html and fast/ruby/rubyDOM-remove-text2.html https://bugs.webkit.org/show_bug.cgi?id=266261

Reviewed by Antti Koivisto.

Make room for the annotation content when base is completely empty.

* LayoutTests/fast/ruby/ruby-expansion-cjk-4.html:
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::adjustVisualGeometryForDisplayBox):
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::RubyFormattingContext::baseEndAdditionalVisualWidth):
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.h:

Canonical link: https://commits.webkit.org/271929@main